--- a/app/tabs/transactions/transactions.component.html
+++ b/app/tabs/transactions/transactions.component.html
@@ -6,11 +6,13 @@
                     <Label col="0" row="0" colSpan="2" class="font-weight-bold font-italic" [text]="item.senderAddress"></Label>
                     <Label col="0" row="1" class="font-weight-bold font-italic" [text]="item.amountNQT + ' BURST'"></Label>
                     <Label col="1" row="1" class="font-weight-bold font-italic" [text]="marketService.getPriceFiatCurrency(item.amountNQT)"></Label>
+                    <Label col="3" row="0" rowspan="2" class="font-weight-bold in-label" text="IN"></Label>
                 </GridLayout>
                 <GridLayout *ngIf="item.recipientId != ownId" class="m-x-auto list-item" columns="auto, auto,*,auto" rows="auto, auto">
                     <Label col="0" row="0" colSpan="2" class="font-weight-bold font-italic" [text]="item.recipientAddress"></Label>
                     <Label col="0" row="1" class="font-weight-bold font-italic" [text]="item.amountNQT + ' BURST'"></Label>
                     <Label col="1" row="1" class="font-weight-bold font-italic" [text]="marketService.getPriceFiatCurrency(item.amountNQT)"></Label>
+                    <Label col="3" row="0" rowspan="2" class="font-weight-bold out-label" text="OUT"></Label>
                 </GridLayout>
             </StackLayout>
         </ng-template>
