--- a/app/tabs/transactions/transactions.component.scss
+++ b/app/tabs/transactions/transactions.component.scss
@@ -1,1 +1,23 @@
 @import '../../app-variables';
+
+.out-label {
+    font-size: 16px;
+    color: $sky;
+    border-color: $sky;
+    border-width: 3px;
+    border-radius: 10px;
+    width: 100px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.in-label {
+    font-size: 16px;
+    color: $success-light;
+    border-color: $success-light;
+    border-width: 3px;
+    border-radius: 10px;
+    width: 100px;
+    text-align: center;
+    vertical-align: middle;
+}
