--- a/app/tabs/balance/balance.component.scss
+++ b/app/tabs/balance/balance.component.scss
@@ -5,7 +5,7 @@
     padding: 10px;
     margin-top: 100px;
     text-align: center;
-    border-radius: 20px;
+    border-radius: $default-border;
     width: 80%;
 }
 
@@ -14,9 +14,4 @@
     width: 400px;
     height: 400px;
     border-radius: 20px;
-}
-
-.action-button {
-    width: 70%;
-    height: $btn-height;
 }
