--- a/app/start/start.component.scss
+++ b/app/start/start.component.scss
@@ -1,9 +1,1 @@
-
-.start-container {
-    vertical-align: middle;
-    height: 90%;
-}
-
-.big-button {
-    height: 150px;
-}
+@import '../../../app-variables';
