--- a/app/pin/pin.component.html
+++ b/app/pin/pin.component.html
@@ -1,13 +1,14 @@
-
 <StackLayout class="page-content" orientation="vertical">
-    <StackLayout class="info-container" orientation="vertical">
-        <Image src="~/images/apple.jpg"></Image>
-        <StackLayout orientation="vertical">
-            <Label class="" text="Please enter your Pin Code!"></Label>
+    <StackLayout class="container" orientation="vertical">
+        <StackLayout class="body-container m-b-20" orientation="vertical">
+            <Label *ngIf="type == 'set'" textWrap="true" class="solo" text="Set a PIN code!"></Label>
+            <Label *ngIf="type == 'verify'" textWrap="true" class="solo" text="Enter the PIN code!"></Label>
+            <StackLayout style="width: 20%" class="solo hr-light"></StackLayout>
+            <Label class="text-view-label fa top" text="&#xf292; PIN"></Label>
+            <TextField class="input" returnKeyType="done"></TextField>
         </StackLayout>
-    </StackLayout>
-
-    <StackLayout class="body-container" orientation="vertical">
-        <NumericKeyboard noDecimals="true"></NumericKeyboard>
+        <StackLayout orientation="vertical">
+            <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf00c;" (tap)="onTapDone($event)"></Button>
+        </StackLayout>
     </StackLayout>
 </StackLayout>
