--- a/app/start/start.component.html
+++ b/app/start/start.component.html
@@ -1,15 +1,13 @@
-
 <StackLayout class="page-content" orientation="vertical">
-    <StackLayout class="info-container" orientation="vertical">
-        <StackLayout orientation="vertical">
-            <Label class="" textWrap="true" text="No wallet created yet! Choose to import an existing wallet or create a new one!"></Label>
+    <StackLayout class="container">
+        <StackLayout class="info-container" orientation="vertical">
+            <StackLayout orientation="vertical">
+                <Label class="solo" textWrap="true" text="No wallet created yet! Choose to import an existing wallet or create a new one!"></Label>
+            </StackLayout>
         </StackLayout>
-    </StackLayout>
-
-    <StackLayout class="start-container" orientation="vertical">
-        <StackLayout orientation="vertical">
-            <Button class="btn btn-primary btn-active big-button" text="Import" [nsRouterLink]="['/import']"></Button>
-            <Button class="btn btn-primary btn-active big-button" text="Create New" [nsRouterLink]="['/create']"></Button>
+        <StackLayout class="m-t-30" orientation="vertical">
+            <Button class="btn btn-primary btn-active action-button fa" text="Import &#xf019;" [nsRouterLink]="['/import']"></Button>
+            <Button class="btn btn-primary btn-active action-button fa" text="Create &#xf067;" [nsRouterLink]="['/create']"></Button>
         </StackLayout>
     </StackLayout>
 </StackLayout>
