--- a/app/create/create.component.html
+++ b/app/create/create.component.html
@@ -1,56 +1,62 @@
-
 <StackLayout class="page-content" orientation="vertical">
-    <StackLayout class="info-container" orientation="vertical">
-        <StackLayout orientation="vertical">
-            <Label class="" textWrap="true" [text]="infotext"></Label>
-        </StackLayout>
-    </StackLayout>
 
-    <StackLayout class="body-container" orientation="vertical">
-        <StackLayout *ngIf="this.step == 0" class="create-step" orientation="vertical">
-            <ActivityIndicator row="1" #activityIndicator busy="true" (busyChange)="onBusyChanged($event)" width="100" height="100" class="activity-indicator"></ActivityIndicator>
-        </StackLayout>
+    <StackLayout class="container" orientation="vertical">
+        <Image *ngIf="this.step != 0" class="logo-small" src="res://apple"></Image>
 
-        <StackLayout *ngIf="this.step == 1" class="start-step" orientation="vertical">
+        <StackLayout class="info-container" orientation="vertical">
             <StackLayout orientation="vertical">
-                <Button class="btn btn-primary btn-active big-button" text="Start" (tap)="onTapStart($event)"></Button>
+                <Label *ngIf="this.step == 1" class="solo" textWrap="true" text="First, create a random seed for the generation of your passphrase!"></Label>
+                <Label *ngIf="this.step == 2" class="solo" textWrap="true" text="Now you have to memorize all 12 words of your passphrase in the right order!"></Label>
+                <Label *ngIf="this.step == 3" class="solo" textWrap="true" text="Please reenter the words of your passphrase!"></Label>
+                <Label *ngIf="this.step == 4" class="solo" textWrap="true" text="Please set a Pin code for your wallet. The Pin code is used to approve outgoing transactions."></Label>
             </StackLayout>
         </StackLayout>
 
-        <StackLayout *ngIf="this.step == 2" class="create-step" orientation="vertical">
+        <StackLayout *ngIf="this.step == 0" orientation="vertical">
+            <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+        </StackLayout>
+
+        <StackLayout *ngIf="this.step == 1" style="padding: 0px;" class="body-container m-t-10" orientation="vertical">
             <StackLayout (touch)="onTouch($event)" class="seed-area" orientation="vertical">
                 <Label class="font-weight-bold" text="Tap and swipe over this area!"></Label>
-            </StackLayout>
-            <StackLayout class="seed-progress" orientation="vertical">
-                <Progress [value]="seed.length" [maxValue]="seedLimit" class="m-20"></Progress>
+                <StackLayout class="seed-progress" orientation="vertical">
+                    <Progress [value]="seed.length" [maxValue]="seedLimit" class="m-20"></Progress>
+                </StackLayout>
             </StackLayout>
         </StackLayout>
 
-        <StackLayout *ngIf="this.step == 3" class="create-step" orientation="vertical">
-            <StackLayout orientation="vertical">
-                <Label text="Write down the following words and keep them secret!"></Label>
+        <StackLayout *ngIf="this.step == 2">
+            <StackLayout class="body-container" orientation="vertical">
+                <Label class="top" textWrap="true" text="Write down the following words and keep them secret!"></Label>
                 <Label class="chip" [text]="passPhrase[word]"></Label>
-                <Button class="btn btn-primary btn-active big-button" text="Next" (tap)="onTapNext($event)"></Button>
             </StackLayout>
+            <Button class="btn btn-primary btn-active action-button" text="Next" (tap)="onTapNext($event)"></Button>
         </StackLayout>
 
-        <StackLayout *ngIf="this.step == 4" class="create-step" orientation="vertical">
-            <Label text="Write down word #{{ word + 1 }} and select it!"></Label>
+        <StackLayout *ngIf="this.step == 3" class="body-container m-b-15" orientation="vertical">
+            <Label class="solo" text="Write down word #{{ word + 1 }} and select it!"></Label>
             <StackLayout class="possibilities" orientation="horizontal">
-                <Button *ngFor="let possibility of retypePassPhrase" class="btn possibility-button" [text]="possibility" (tap)="onTapPossibility($event)"></Button>
+                <Button *ngFor="let possibility of retypePassPhrase" class="btn btn-primary btn-active possibility-button" [text]="possibility" (tap)="onTapPossibility($event)"></Button>
             </StackLayout>
             <TextField class="input" [text]="try" (textChange)="onChange($event)"></TextField>
         </StackLayout>
 
-        <StackLayout *ngIf="this.step == 5" class="create-step" orientation="vertical">
-            <Label text="Please set your Pin Code for this account!"></Label>
-            <NumericKeyboard noDecimals="true"></NumericKeyboard>
+        <StackLayout *ngIf="this.step == 4" orientation="vertical">
+            <StackLayout class="body-container" orientation="vertical">
+                <Label class="text-view-label fa top" text="&#xf292; PIN"></Label>
+                <TextField class="input" [(ngModel)]="pin" keyboardType="phone" returnKeyType="done"></TextField>
+            </StackLayout>
+            <StackLayout orientation="vertical">
+                <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf00c;" (tap)="onTapDone($event)"></Button>
+            </StackLayout>
         </StackLayout>
 
         <StackLayout class="progress-bottom" orientation="vertical">
-            <Button *ngIf="this.step == 4 || this.step == 3" class="btn btn-active generate-again-button" text="Generate Again" (tap)="onTapGenerateAgain($event)"></Button>
-            <StackLayout *ngIf="this.step != 4 && this.step != 3" class="bottom-filler"></StackLayout>
-            <Progress *ngIf="this.step > 1"  [value]="step - 1" maxValue="5" class="m-20"></Progress>
+            <StackLayout *ngIf="this.step == 2 || this.step == 3">
+                <Button class="generate-again-button btn btn-primary btn-active" text="Generate Again" (tap)="onTapGenerateAgain($event)"></Button>
+            </StackLayout>
+            <StackLayout *ngIf="this.step != 3 && this.step != 2" class="bottom-filler"></StackLayout>
+            <Progress class="m-20 progress-bar" *ngIf="this.step > 0" [value]="step - 1" maxValue="5"></Progress>
         </StackLayout>
     </StackLayout>
 </StackLayout>
