--- a/app/import/import.component.html
+++ b/app/import/import.component.html
@@ -1,23 +1,24 @@
 
 <StackLayout class="page-content" orientation="vertical">
-    <StackLayout class="info-container" orientation="vertical">
-        <StackLayout orientation="vertical">
-            <Label class="" textWrap="true" text="Import an active wallet by entering its passphrase! Otherwise, import an offline wallet by entering its Burstcoin address!"></Label>
-        </StackLayout>
-    </StackLayout>
-
-    <StackLayout class="import-container" orientation="vertical">
-        <Label class="h3 m-15 toggle-label" textWrap="true" [text]="state"></Label>
+    <StackLayout class="container" orientation="vertical">
         <StackLayout class="info-container" orientation="vertical">
             <StackLayout orientation="vertical">
-                <Label class="" textWrap="true" [text]="description"></Label>
+                <Label class="solo" textWrap="true" text="Import an active wallet by entering its passphrase! Otherwise, import an offline wallet by entering its Burstcoin address!"></Label>
             </StackLayout>
         </StackLayout>
-        <Switch class="m-15 toggle-switch" checked="true" (checkedChange)="onChecked($event)"></Switch>
 
-        <StackLayout orientation="vertical">
+        <StackLayout class="body-container" orientation="vertical">
+            <Label class="h3 m-15 toggle-label" textWrap="true" [text]="state"></Label>
+            <StackLayout class="info-container" orientation="vertical">
+                <StackLayout orientation="vertical">
+                    <Label class="" textWrap="true" [text]="description"></Label>
+                </StackLayout>
+            </StackLayout>
+            <Switch class="m-15 toggle-switch" checked="true" (checkedChange)="onChecked($event)"></Switch>
             <TextField class="input" [hint]="hint" [(ngModel)]='input'></TextField>
-            <Button class="btn btn-primary btn-active big-button" text="Import" (tap)="onTapImport($event)"></Button>
+        </StackLayout>
+        <StackLayout orientation="vertical">
+            <Button class="btn btn-primary btn-active action-button fa" text="Import &#xf019;" (tap)="onTapImport($event)"></Button>
         </StackLayout>
     </StackLayout>
 </StackLayout>
