--- a/app/_app-variables.scss
+++ b/app/_app-variables.scss
@@ -21,6 +21,7 @@ $background: $base !default;
 $default-text: #000027 !default;
 $text-view-label-size: 18 !default;
 $default-border: 3 !default;
+$default-border-color: #ececec !default;
 $light-text: #fefcf8 !default;
 $background-dark: $base !default;
 $background-light: #fefcf8 !default;
