--- a/app/create/create.component.html
+++ b/app/create/create.component.html
@@ -1,7 +1,7 @@
 <StackLayout class="page-content" orientation="vertical">
 
     <StackLayout class="container" orientation="vertical">
-        <Image *ngIf="this.step != 0" class="logo-small" src="res://apple"></Image>
+        <Image *ngIf="this.step != 0" class="logo-small m-b-15 m-t-15" src="res://apple"></Image>
 
         <StackLayout class="info-container" orientation="vertical">
             <StackLayout orientation="vertical">
