--- a/app/tabs/balance/balance.component.html
+++ b/app/tabs/balance/balance.component.html
@@ -7,9 +7,9 @@
             <Label class="font-weight-bold font-italic p-t-10 p-b-10" [text]="balance"></Label>
             <StackLayout class="hr-light"></StackLayout>
             <GridLayout class="m-x-auto p-t-10 p-b-10" columns="*,auto,*" rows="auto">
-                <Label col="0" class="font-weight-bold font-italic" [text]="balanceBTC"></Label>
+                <Label col="0" class="font-weight-bold font-italic m-r-10" [text]="balanceBTC"></Label>
                 <Label col="1" class="fa p-t-2" text="&#xf0ec;"></Label>
-                <Label col="2" class="font-weight-bold font-italic" [text]="balanceCur"></Label>
+                <Label col="2" class="font-weight-bold font-italic m-l-10" [text]="balanceCur"></Label>
             </GridLayout>
     </StackLayout>
     <StackLayout orientation="vertical">
