logo, styling changes

--- a/app/_app-variables.scss
+++ b/app/_app-variables.scss
@@ -4,6 +4,7 @@ $white: #fff !default;
 $base: #00264d !default;
 $grey: #e0e0e0 !default;
 $grey-background: #bababa !default;
+$light-gray: #ececec !default;
 $charcoal: #303030 !default;
 $success-dark: #06CE6A !default;
 $success-light: #00E676 !default;
@@ -21,7 +22,7 @@ $background: $base !default;
 $default-text: #000027 !default;
 $text-view-label-size: 18 !default;
 $default-border: 3 !default;
-$default-border-color: #ececec !default;
+$default-border-color: $light-gray !default;
 $light-text: #fefcf8 !default;
 $background-dark: $base !default;
 $background-light: #fefcf8 !default;
