--- a/app/app.scss
+++ b/app/app.scss
@@ -97,7 +97,8 @@ Page {
         }
 
         .info-container {
-            background-color: $background-light;
+            background-color: $background-dark;
+            color: $background-light;
             border-color: $default-border-color;
             border-width: 1;
             border-radius: $default-border;
