--- a/app/import/import.component.html
+++ b/app/import/import.component.html
@@ -3,7 +3,7 @@
 
     <StackLayout class="container" orientation="vertical">
 
-        <Image class="logo-small m-b-15" src="res://apple"></Image>
+        <Image class="logo-small m-b-15" src="res://logo"></Image>
 
         <StackLayout class="info-container" orientation="vertical">
             <StackLayout orientation="vertical">
