--- a/app/start/start.component.html
+++ b/app/start/start.component.html
@@ -1,7 +1,7 @@
 <StackLayout class="page-content" orientation="vertical">
     <StackLayout class="container">
 
-        <Image class="logo-normal m-b-30 m-t-10" src="res://apple"></Image>
+        <Image class="logo-normal m-b-30 m-t-10" src="res://logo"></Image>
 
         <StackLayout *ngIf="this.loading" orientation="vertical">
             <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
