--- a/app/tabs/tabs.component.html
+++ b/app/tabs/tabs.component.html
@@ -1,7 +1,7 @@
 <Page xmlns="http://www.nativescript.org/tns.xsd" loaded="onPageLoaded">
     <ActionBar class="action-bar">
         <GridLayout columns="auto, 200, *, auto" rows="auto">
-            <Image col="0" class="logo-tiny m-r-15" src="res://apple"></Image>
+            <Image col="0" class="logo-tiny m-r-15" src="res://logo"></Image>
             <Label col="1" class="action-bar-title" [text]="title"></Label>
             <Button *ngIf="selectedIndex == 2" col="3" class="btn btn-primary btn-active action-bar-button fa" text="&#xf067;"></Button>
         </GridLayout>
