--- a/app/create/create.component.html
+++ b/app/create/create.component.html
@@ -5,10 +5,11 @@
 
         <StackLayout class="info-container" orientation="vertical">
             <StackLayout orientation="vertical">
-                <Label *ngIf="this.step == 1" class="solo" textWrap="true" text="First, create a random seed for the generation of your passphrase!"></Label>
-                <Label *ngIf="this.step == 2" class="solo" textWrap="true" text="Now you have to memorize all 12 words of your passphrase in the right order!"></Label>
-                <Label *ngIf="this.step == 3" class="solo" textWrap="true" text="Please reenter the words of your passphrase!"></Label>
-                <Label *ngIf="this.step == 4" class="solo" textWrap="true" text="Please set a Pin code for your wallet. The Pin code is used to approve outgoing transactions."></Label>
+                <Label *ngIf="this.step != 0" class="top text-view-label fa" text="&#xf05a;"></Label>
+                <Label *ngIf="this.step == 1" class="bottom" textWrap="true" text="First, create a random seed for the generation of your passphrase!"></Label>
+                <Label *ngIf="this.step == 2" class="bottom" textWrap="true" text="Now you have to memorize all 12 words of your passphrase in the right order!"></Label>
+                <Label *ngIf="this.step == 3" class="bottom" textWrap="true" text="Please reenter the words of your passphrase!"></Label>
+                <Label *ngIf="this.step == 4" class="bottom" textWrap="true" text="Please set a Pin code for your wallet. The Pin code is used to approve outgoing transactions."></Label>
             </StackLayout>
         </StackLayout>
 
