--- a/app/import/import.component.html
+++ b/app/import/import.component.html
@@ -1,4 +1,3 @@
-
 <StackLayout class="page-content" orientation="vertical">
 
     <StackLayout class="container" orientation="vertical">
@@ -7,17 +6,19 @@
 
         <StackLayout class="info-container" orientation="vertical">
             <StackLayout orientation="vertical">
-                <Label class="solo" textWrap="true" text="Import an active wallet by entering its passphrase! Otherwise, import an offline wallet by entering its Burstcoin address!"></Label>
+                <Label class="top text-view-label fa" text="&#xf05a;"></Label>
+                <Label class="bottom" textWrap="true" text="Import an active wallet by entering its passphrase! Otherwise, import an offline wallet by entering its Burstcoin address!"></Label>
             </StackLayout>
         </StackLayout>
 
         <StackLayout class="body-container" orientation="vertical">
-            <Label class="h3 m-15 toggle-label" textWrap="true" [text]="state"></Label>
-            <StackLayout class="info-container" orientation="vertical">
+            <Label class="h3 toggle-label" textWrap="true" [text]="state"></Label>
+            <StackLayout style="width: 100%;" class="info-container" orientation="vertical">
                 <StackLayout orientation="vertical">
                     <Label class="solo" textWrap="true" [text]="description"></Label>
                 </StackLayout>
             </StackLayout>
+
             <Switch class="m-15 toggle-switch" checked="true" (checkedChange)="onChecked($event)"></Switch>
             <TextField class="input" [hint]="hint" [(ngModel)]='input'></TextField>
         </StackLayout>
