--- a/app/tabs/accounts/activate/activate.component.html
+++ b/app/tabs/accounts/activate/activate.component.html
@@ -1,16 +1,14 @@
 <Page xmlns="http://www.nativescript.org/tns.xsd" loaded="onPageLoaded" actionBarHidden="true">
     <StackLayout class="page-content" orientation="vertical">
         <StackLayout class="container" orientation="vertical">
+            <Image class="logo-small m-b-15" src="res://logo"></Image>
             <StackLayout class="info-container" orientation="vertical">
-            </StackLayout>
-            <StackLayout class="body-container m-b-20" orientation="vertical">
                 <Label class="top text-view-label fa" text="&#xf05a;"></Label>
                 <Label textWrap="true" class="bottom" [text]="'Enter the passphrase of the wallet ' + walletService.currentWallet.value.address + ' here!'"></Label>
-                <StackLayout style="width: 20%" class="solo hr-light"></StackLayout>
-                <Label class="text-view-label fa top" text="&#xf084; Passphrase"></Label>
-                <TextField class="input" returnKeyType="done"></TextField>
             </StackLayout>
-            <StackLayout orientation="vertical">
+            <StackLayout class="body-container m-b-20" orientation="vertical">
+                <Label class="text-view-label fa" text="&#xf084; Passphrase"></Label>
+                <TextField class="input" returnKeyType="done"></TextField>
                 <Button class="btn btn-primary btn-active action-button fa" text="Next &#xf18e;" (tap)="onTapNext($event)"></Button>
             </StackLayout>
         </StackLayout>
