curve25519, ec-kcdsa for typescript 2.4.2, due to bug in compiler

--- a/app/app.scss
+++ b/app/app.scss
@@ -16,6 +16,10 @@ Page {
     color: $default-text;
 }
 
+.action-bar {
+    text-align: left;
+}
+
 .logo-tiny {
     height: 100px;
     width: 100px;
