--- a/app/tabs/accounts/activate/activate.component.html
+++ b/app/tabs/accounts/activate/activate.component.html
@@ -1,3 +1,10 @@
+<ActionBar class="action-bar">
+    <StackLayout orientation="horizontal">
+        <Image class="logo-tiny m-r-15" src="res://logo"></Image>
+        <Label class="action-bar-title" text="Activate Offline Wallet"></Label>
+    </StackLayout>
+</ActionBar>
+
 <Page xmlns="http://www.nativescript.org/tns.xsd" loaded="onPageLoaded" actionBarHidden="true">
     <StackLayout class="page-content" orientation="vertical">
         <StackLayout class="container" orientation="vertical">
