--- a/app/create/create.component.html
+++ b/app/create/create.component.html
@@ -1,3 +1,11 @@
+<ActionBar class="action-bar">
+    <StackLayout orientation="horizontal">
+        <Image class="logo-tiny m-r-15" src="res://logo"></Image>
+        <Label class="action-bar-title" text="Create New Wallet"></Label>
+    </StackLayout>
+</ActionBar>
+
+
 <StackLayout class="page-content" orientation="vertical">
 
     <StackLayout class="container" orientation="vertical">
