--- a/app/tabs/accounts/activate/activate.component.html
+++ b/app/tabs/accounts/activate/activate.component.html
@@ -9,14 +9,33 @@
     <StackLayout class="page-content" orientation="vertical">
         <StackLayout class="container" orientation="vertical">
             <Image class="logo-small m-b-15" src="res://logo"></Image>
-            <StackLayout class="info-container" orientation="vertical">
-                <Label class="top text-view-label fa" text="&#xf05a;"></Label>
-                <Label textWrap="true" class="bottom" [text]="'Enter the passphrase of the wallet ' + walletService.currentWallet.value.address + ' here!'"></Label>
+
+            <StackLayout *ngIf="this.step == 0" style="margin-bottom: 200px;" orientation="vertical">
+                <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
             </StackLayout>
-            <StackLayout class="body-container m-b-20" orientation="vertical">
-                <Label class="text-view-label fa" text="&#xf084; Passphrase"></Label>
-                <TextField class="input" returnKeyType="done"></TextField>
-                <Button class="btn btn-primary btn-active action-button fa" text="Next &#xf18e;" (tap)="onTapNext($event)"></Button>
+
+            <StackLayout *ngIf="step == 1">
+                <StackLayout class="info-container" orientation="vertical">
+                    <Label class="top text-view-label fa" text="&#xf05a;"></Label>
+                    <Label textWrap="true" class="bottom" [text]="'Enter the passphrase of the wallet ' + walletService.currentWallet.value.address + ' here!'"></Label>
+                </StackLayout>
+                <StackLayout class="body-container m-b-20" orientation="vertical">
+                    <Label class="text-view-label fa" text="&#xf084; Passphrase"></Label>
+                    <TextField class="input" [(ngModel)]="passphrase" returnKeyType="done"></TextField>
+                    <Button class="btn btn-primary btn-active action-button fa" text="Next &#xf18e;" (tap)="onTapNext($event)"></Button>
+                </StackLayout>
+            </StackLayout>
+
+            <StackLayout *ngIf="step == 2">
+                <StackLayout class="info-container" orientation="vertical">
+                    <Label class="top text-view-label fa" text="&#xf05a;"></Label>
+                    <Label textWrap="true" class="bottom" text="Set a six-digit PIN code!"></Label>
+                </StackLayout>
+                <StackLayout class="body-container m-b-20" orientation="vertical">
+                    <Label class="text-view-label fa" text="&#xf292; PIN"></Label>
+                    <TextField class="input" [(ngModel)]="pin" keyboardType="phone" returnKeyType="done"></TextField>
+                    <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf05d;" (tap)="onTapNext($event)"></Button>
+                </StackLayout>
             </StackLayout>
         </StackLayout>
     </StackLayout>
