import pin set done

--- a/app/tabs/accounts/activate/activate.component.html
+++ b/app/tabs/accounts/activate/activate.component.html
@@ -34,7 +34,7 @@
                 <StackLayout class="body-container m-b-20" orientation="vertical">
                     <Label class="text-view-label fa" text="&#xf292; PIN"></Label>
                     <TextField class="input" [(ngModel)]="pin" keyboardType="phone" returnKeyType="done"></TextField>
-                    <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf05d;" (tap)="onTapNext($event)"></Button>
+                    <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf05d;" (tap)="onTapDone($event)"></Button>
                 </StackLayout>
             </StackLayout>
         </StackLayout>
