--- a/app/import/import.component.html
+++ b/app/import/import.component.html
@@ -18,19 +18,33 @@
             </StackLayout>
         </StackLayout>
 
-        <StackLayout class="body-container" orientation="vertical">
-            <Label class="h3 toggle-label" textWrap="true" [text]="state"></Label>
-            <StackLayout style="width: 100%;" class="info-container" orientation="vertical">
-                <StackLayout orientation="vertical">
-                    <Label class="solo" textWrap="true" [text]="description"></Label>
+        <StackLayout *ngIf="step == 1">
+            <StackLayout class="body-container" orientation="vertical">
+                <Label class="h3 toggle-label" textWrap="true" [text]="state"></Label>
+                <StackLayout style="width: 100%;" class="info-container" orientation="vertical">
+                    <StackLayout orientation="vertical">
+                        <Label class="solo" textWrap="true" [text]="description"></Label>
+                    </StackLayout>
                 </StackLayout>
-            </StackLayout>
 
-            <Switch class="m-15 toggle-switch" checked="true" (checkedChange)="onChecked($event)"></Switch>
-            <TextField class="input" [hint]="hint" [(ngModel)]='input'></TextField>
+                <Switch class="m-15 toggle-switch" checked="true" (checkedChange)="onChecked($event)"></Switch>
+                <TextField class="input" [hint]="hint" [(ngModel)]='input'></TextField>
+            </StackLayout>
+            <StackLayout orientation="vertical">
+                <Button *ngIf="active == true" class="btn btn-primary btn-active action-button fa" text="Next &#xf18e;" (tap)="onTapNext($event)"></Button>
+                <Button *ngIf="active == false" class="btn btn-primary btn-active action-button fa" text="Import &#xf019;" (tap)="onTapImport($event)"></Button>
+            </StackLayout>
         </StackLayout>
-        <StackLayout orientation="vertical">
-            <Button class="btn btn-primary btn-active action-button fa" text="Import &#xf019;" (tap)="onTapImport($event)"></Button>
+
+        <StackLayout *ngIf="step == 2">
+            <StackLayout class="info-container" orientation="vertical">
+                <Label textWrap="true" class="solo" text="Set a six-digit PIN code!"></Label>
+            </StackLayout>
+            <StackLayout class="body-container m-b-20" orientation="vertical">
+                <Label class="text-view-label fa" text="&#xf292; PIN"></Label>
+                <TextField class="input" [(ngModel)]="pin" keyboardType="phone" returnKeyType="done"></TextField>
+                <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf05d;" (tap)="onTapDone($event)"></Button>
+            </StackLayout>
         </StackLayout>
     </StackLayout>
 </StackLayout>
