clear history for start component

--- a/app/create/create.component.html
+++ b/app/create/create.component.html
@@ -17,7 +17,7 @@
                 <Label *ngIf="this.step == 1" class="bottom" textWrap="true" text="First, create a random seed for the generation of your passphrase!"></Label>
                 <Label *ngIf="this.step == 2" class="bottom" textWrap="true" text="Now you have to memorize all 12 words of your passphrase in the right order!"></Label>
                 <Label *ngIf="this.step == 3" class="bottom" textWrap="true" text="Please reenter the words of your passphrase!"></Label>
-                <Label *ngIf="this.step == 4" class="bottom" textWrap="true" text="Please set a Pin code for your wallet. The Pin code is used to approve outgoing transactions."></Label>
+                <Label *ngIf="this.step == 4" class="bottom" textWrap="true" text="Please set a six-digit pin code for your wallet. The pin code is used to approve outgoing transactions."></Label>
             </StackLayout>
         </StackLayout>
 
