--- a/app/import/import.component.html
+++ b/app/import/import.component.html
@@ -38,7 +38,7 @@
 
         <StackLayout *ngIf="step == 2">
             <StackLayout class="info-container" orientation="vertical">
-                <Label textWrap="true" class="solo" text="Set a six-digit PIN code!"></Label>
+                <Label textWrap="true" class="solo" text="Please set a six-digit pin code for your wallet. The pin code is used to approve outgoing transactions."></Label>
             </StackLayout>
             <StackLayout class="body-container m-b-20" orientation="vertical">
                 <Label class="text-view-label fa" text="&#xf292; PIN"></Label>
