--- a/app/tabs/balance/balance.component.html
+++ b/app/tabs/balance/balance.component.html
@@ -1,20 +1,22 @@
-<StackLayout orientation="vertical">
-    <StackLayout class="balance-container m-b-30" orientation="vertical">
-            <Image class="qrcode" [src]="qrcode"></Image>
-            <StackLayout class="hr-light"></StackLayout>
-            <Label class="font-weight-bold font-italic p-t-10 p-b-10" [text]="address"></Label>
-            <StackLayout class="hr-light"></StackLayout>
-            <Label class="font-weight-bold font-italic p-t-10 p-b-10" [text]="balance"></Label>
-            <StackLayout class="hr-light"></StackLayout>
-            <GridLayout class="p-t-10 p-b-10" columns="150,auto,150" rows="auto">
-                <Label col="0" class="font-weight-bold font-italic  m-r-10 text-right" [text]="balanceBTC"></Label>
-                <Label col="1" class="fa p-t-2" text="&#xf0ec;"></Label>
-                <Label col="2" class="font-weight-bold font-italic m-l-10 text-left" [text]="balanceCur"></Label>
-            </GridLayout>
-    </StackLayout>
+<PullToRefresh (refresh)="refresh($event)">
     <StackLayout orientation="vertical">
-        <Button *ngIf="wallet?.type == 'active'" class="btn btn-primary btn-active action-button fa" text="Send &#xf08b;" [nsRouterLink]="['balance/send']"></Button>
-        <!--<Button class="btn btn-primary btn-active action-button" text="Receive" (tap)="onTapReceive($event)"></Button>-->
-        <Button *ngIf="wallet?.type == 'offline'" class="btn btn-primary btn-active action-button fa" text="Activate &#xf05d;" [nsRouterLink]="['accounts/activate']"></Button>
+        <StackLayout class="balance-container m-b-30" orientation="vertical">
+                <Image class="qrcode" [src]="qrcode"></Image>
+                <StackLayout class="hr-light"></StackLayout>
+                <Label class="font-weight-bold font-italic p-t-10 p-b-10" [text]="address"></Label>
+                <StackLayout class="hr-light"></StackLayout>
+                <Label class="font-weight-bold font-italic p-t-10 p-b-10" [text]="balance"></Label>
+                <StackLayout class="hr-light"></StackLayout>
+                <GridLayout class="p-t-10 p-b-10" columns="150,auto,150" rows="auto">
+                    <Label col="0" class="font-weight-bold font-italic  m-r-10 text-right" [text]="balanceBTC"></Label>
+                    <Label col="1" class="fa p-t-2" text="&#xf0ec;"></Label>
+                    <Label col="2" class="font-weight-bold font-italic m-l-10 text-left" [text]="balanceCur"></Label>
+                </GridLayout>
+        </StackLayout>
+        <StackLayout orientation="vertical">
+            <Button *ngIf="wallet?.type == 'active'" class="btn btn-primary btn-active action-button fa" text="Send &#xf08b;" [nsRouterLink]="['balance/send']"></Button>
+            <!--<Button class="btn btn-primary btn-active action-button" text="Receive" (tap)="onTapReceive($event)"></Button>-->
+            <Button *ngIf="wallet?.type == 'offline'" class="btn btn-primary btn-active action-button fa" text="Activate &#xf05d;" [nsRouterLink]="['accounts/activate']"></Button>
+        </StackLayout>
     </StackLayout>
-</StackLayout>
+</PullToRefresh>
