send component fixes, adjustments to inputs/styling

--- a/app/tabs/balance/send/send.component.html
+++ b/app/tabs/balance/send/send.component.html
@@ -1,24 +1,33 @@
-<StackLayout orientation="vertical">
-    <StackLayout class="balance-container m-b-30" orientation="vertical">
-        <Label class="font-weight-bold font-italic p-t-10 p-b-10 big-label" text="Your balance:"></Label>
-        <StackLayout class="hr-light"></StackLayout>
-        <Label class="font-weight-bold font-italic p-t-10 p-b-10 huge-label" [text]="balance"></Label>
+<ActionBar class="action-bar">
+    <StackLayout orientation="horizontal">
+        <Image class="logo-tiny m-r-15" src="res://logo"></Image>
+        <Label class="action-bar-title" text="Send BURST"></Label>
     </StackLayout>
-    <StackLayout class="send-container m-b-30" orientation="vertical">
-        <GridLayout class="p-t-10 p-15" columns="*9, *2" rows="auto, auto">
-            <Label col="0" row="0" class="p-t-10 p-b-10 big-label" text="Recipient" keyboardType="done"></Label>
-            <TextView col="0" row="1" class="input recipient-input" ></TextView>
-            <Button col="1" row="1" class="fa text-center" text="&#xf029;" (tap)=onTapScan($event)></Button>
-        </GridLayout>
-        <StackLayout class="hr-light"></StackLayout>
-        <GridLayout class="p-t-10 p-15" columns="*,*" rows="auto, auto">
-            <Label col="0" row="0" class="p-t-10 p-b-10 big-label" text="Amount"></Label>
-            <Label col="1" row="0" class="p-t-10 p-b-10 big-label" text="Fee"></Label>
-            <TextView col="0" row="1" class="input-border number-input" keyboardType="number"></TextView>
-            <TextView col="1" row="1" class="input-border number-input" keyboardType="number"></TextView>
-        </GridLayout>
-    </StackLayout>
-    <StackLayout class="actions-container" orientation="vertical">
-        <Button class="btn btn-primary btn-active action-button" text="Send" (tap)="onTapSend($event)"></Button>
+</ActionBar>
+
+<StackLayout class="page-content" orientation="vertical">
+    <StackLayout class="container">
+
+        <Image class="logo-small" src="res://logo"></Image>
+
+        <StackLayout style="width: 90%" class="body-container" orientation="vertical">
+            <Label class="font-italic p-b-15 huge-label" [text]="'Balance: ' + balance"></Label>
+            <StackLayout class="hr-light"></StackLayout>
+            <GridLayout class="text-left m-t-10" columns="*9, *2" rows="auto, auto">
+                <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf2bc; Recipient" keyboardType="done"></Label>
+                <TextField col="0" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
+                <Button col="1" row="0" rowspan="2" class="scan-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
+            </GridLayout>
+            <GridLayout class="text-left m-b-10" columns="*,*" rows="auto, auto">
+                <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0d6; Amount"></Label>
+                <Label col="1" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0ec; Fee"></Label>
+                <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount"></TextField>
+                <TextField col="1" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee"></TextField>
+            </GridLayout>
+            <StackLayout class="hr-light"></StackLayout>
+        </StackLayout>
+        <StackLayout class="m-b-20" orientation="vertical">
+            <Button class="btn btn-primary btn-active action-button" text="Send" (tap)="onTapSend($event)"></Button>
+        </StackLayout>
     </StackLayout>
 </StackLayout>
