--- a/app/tabs/balance/send/send.component.scss
+++ b/app/tabs/balance/send/send.component.scss
@@ -1,20 +1,7 @@
 
-.balance-container {
-    background-color: #EAEAEA;
-    padding: 10px;
-    margin-top: 100px;
-    text-align: center;
-    border-radius: 20px;
-    width: 80%;
-}
 
-.send-container {
-    background-color: #EAEAEA;
-    padding: 10px;
-    text-align: left;
-    border-radius: 20px;
-    width: 80%;
-}
+@import '../../../app-variables';
+
 
 .big-label {
     font-size: 18px;
@@ -26,20 +13,14 @@
 
 .recipient-input {
     width: 100%;
+    text-transform: uppercase;
 }
 
 .number-input {
     width: 50%;
 }
 
-.qrcode {
-    margin: 25px;
-    width: 400px;
-    height: 400px;
-    border-radius: 20px;
-}
-
-.action-button {
-    width: 70%;
-    height: 200px;
+.scan-button {
+    height: 50;
+    width: 50;
 }
