--- a/app/tabs/balance/send/send.component.html
+++ b/app/tabs/balance/send/send.component.html
@@ -18,16 +18,18 @@
                 <TextField col="0" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
                 <Button col="1" row="0" rowspan="2" class="scan-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
             </GridLayout>
-            <GridLayout class="text-left m-b-10" columns="*,*" rows="auto, auto">
+            <StackLayout class="hr-light m-t-10 m-b-10"></StackLayout>
+            <GridLayout class="text-left m-b-10" columns="*2, auto,*" rows="auto, auto">
                 <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0d6; Amount"></Label>
-                <Label col="1" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0ec; Fee"></Label>
+                <Label col="2" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0ec; Fee"></Label>
                 <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount"></TextField>
-                <TextField col="1" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee"></TextField>
+                <Label col="1" row="1" rowspan="2" class="p-5 p-r-30 fa" [text]="'= ' + marketService.getPriceFiatCurrency(amount)"></Label>
+                <TextField col="2" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee"></TextField>
             </GridLayout>
             <StackLayout class="hr-light"></StackLayout>
         </StackLayout>
         <StackLayout class="m-b-20" orientation="vertical">
-            <Button class="btn btn-primary btn-active action-button" text="Send" (tap)="onTapSend($event)"></Button>
+            <Button class="btn btn-primary btn-active action-button fa" text="Verify &#xf132;" (tap)="onTapSend($event)"></Button>
         </StackLayout>
     </StackLayout>
 </StackLayout>
