--- a/app/tabs/balance/send/send.component.html
+++ b/app/tabs/balance/send/send.component.html
@@ -10,26 +10,58 @@
 
         <Image class="logo-small" src="res://logo"></Image>
 
-        <StackLayout style="width: 90%" class="body-container" orientation="vertical">
-            <Label class="font-italic p-b-15 huge-label" [text]="'Balance: ' + balance"></Label>
-            <StackLayout class="hr-light"></StackLayout>
-            <GridLayout class="text-left m-t-10" columns="*9, *2" rows="auto, auto">
-                <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf2bc; Recipient" keyboardType="done"></Label>
-                <TextField col="0" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
-                <Button col="1" row="0" rowspan="2" class="scan-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
-            </GridLayout>
-            <StackLayout class="hr-light m-t-10 m-b-10"></StackLayout>
-            <GridLayout class="text-left m-b-10" columns="*2, *3, *" rows="auto, auto">
-                <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0d6; Amount"></Label>
-                <Label col="2" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0ec; Fee"></Label>
-                <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount"></TextField>
-                <Label col="1" row="1" rowspan="2" class="p-5 p-r-15 fa text-center" [text]="'= ' + marketService.getPriceFiatCurrency(amount)"></Label>
-                <TextField col="2" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee"></TextField>
-            </GridLayout>
-            <StackLayout class="hr-light"></StackLayout>
+        <StackLayout *ngIf="this.step == 1">
+            <StackLayout style="width: 90%" class="body-container" orientation="vertical">
+                <Label class="font-italic p-b-15 huge-label" [text]="'Balance: ' + balance"></Label>
+                <StackLayout class="hr-light"></StackLayout>
+                <GridLayout class="text-left m-t-10" columns="*9, *2" rows="auto, auto">
+                    <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf2bc; Recipient"></Label>
+                    <TextField col="0" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
+                    <Button col="1" row="0" rowspan="2" class="scan-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
+                </GridLayout>
+                <StackLayout class="hr-light m-t-10 m-b-10"></StackLayout>
+                <GridLayout class="text-left m-b-10" columns="*2, *3, *" rows="auto, auto">
+                    <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0d6; Amount"></Label>
+                    <Label col="2" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0ec; Fee"></Label>
+                    <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount"></TextField>
+                    <Label col="1" row="1" rowspan="2" class="p-5 p-r-15 fa text-center" [text]="'= ' + marketService.getPriceFiatCurrency(amount)"></Label>
+                    <TextField col="2" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee"></TextField>
+                </GridLayout>
+                <StackLayout class="hr-light"></StackLayout>
+            </StackLayout>
+            <StackLayout class="m-b-20" orientation="vertical">
+                <Button class="btn btn-primary btn-active action-button fa" text="Verify &#xf132;" (tap)="onTapVerify($event)"></Button>
+            </StackLayout>
         </StackLayout>
-        <StackLayout class="m-b-20" orientation="vertical">
-            <Button class="btn btn-primary btn-active action-button fa" text="Verify &#xf132;" (tap)="onTapSend($event)"></Button>
+
+        <StackLayout *ngIf="this.step == 2">
+            <StackLayout class="body-container" orientation="vertical">
+                <Label class="font-italic p-b-15 huge-label" [text]="'Balance: ' + balance"></Label>
+                <StackLayout class="hr-light"></StackLayout>
+                <GridLayout class="text-left m-t-10 m-b-10" columns="auto, auto, auto" rows="auto, auto, auto">
+                    <Label col="0" row="0" class="p-t-5 p-b-5 fa" text="&#xf2bc; Recipient:"></Label>
+                    <Label col="1" row="0" colspan="2" class="p-t-5 p-b-5 p-l-5 fa" [text]="recipient"></Label>
+
+                    <Label col="0" row="1" class="p-t-5 p-b-5 fa" text="&#xf0d6; Amount:"></Label>
+                    <Label col="1" row="1" class="p-t-5 p-b-5 p-l-5 fa" [text]="amount"></Label>
+
+                    <Label col="0" row="2" class="p-t-5 p-b-5 fa" text="&#xf0ec; Fee:"></Label>
+                    <Label col="1" row="2" class="p-t-5 p-b-5 p-l-5 fa" [text]="fee"></Label>
+
+                    <Label col="2" row="1" rowspan="2" style="vertical-align:middle" class="p-5" [text]="'= ' + marketService.getPriceFiatCurrency(amount + fee)"></Label>
+                </GridLayout>
+                <StackLayout class="hr-light"></StackLayout>
+            </StackLayout>
+            <StackLayout class="info-container" orientation="vertical">
+                <Label textWrap="true" class="solo" text="Enter your pin code!"></Label>
+            </StackLayout>
+            <StackLayout class="body-container m-b-5" orientation="vertical">
+                <Label class="text-view-label fa" text="&#xf292; PIN"></Label>
+                <TextField class="input" [(ngModel)]="pin" keyboardType="number" returnKeyType="done"></TextField>
+            </StackLayout>
+            <StackLayout class="m-b-20" orientation="vertical">
+                <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf05d;" (tap)="onTapDone($event)"></Button>
+            </StackLayout>
         </StackLayout>
     </StackLayout>
 </StackLayout>
