send functionalities refactoring

--- a/app/tabs/balance/send/send.component.html
+++ b/app/tabs/balance/send/send.component.html
@@ -60,7 +60,7 @@
                 <TextField class="input" [(ngModel)]="pin" keyboardType="number" returnKeyType="done"></TextField>
             </StackLayout>
             <StackLayout class="m-b-20" orientation="vertical">
-                <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf05d;" (tap)="onTapDone($event)"></Button>
+                <Button class="btn btn-primary btn-active action-button fa" text="Accept &#xf05d;" (tap)="onTapAccept($event)"></Button>
             </StackLayout>
         </StackLayout>
     </StackLayout>
